# ExoGAN2

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml
docs/: api_modules.rst  conf.py  index.rst  installation.rst  license.rst  modules.rst  quickstart.rst  usage.rst
exogan/: exogan.py
exogan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
exogan/libraries/: __init__.py  libraries.py
exogan/model/: __init__.py  model.py
exogan/parameter/: __init__.py  parameterparser.py
exogan/tools/: __init__.py  tools.py
exogan/util/: utils.py
